fix: styling of the scrollbar corrected

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,19 @@ body,
   font-family: "Inter", sans-serif;
   background-color: #1f2026;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #242427;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #48494e;
+}
+
+::-webkit-scrollbar-track:hover {
+  background-color: #2a2b2f;
+}
